--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "gsap": "^3.7.1",
     "vue": "^3.0.0",
     "vuex": "^4.0.0-0"
   },
@@ -16,8 +17,8 @@
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
-    "node-sass": "^4.12.0",
-    "sass-loader": "^8.0.2"
+    "sass": "^1.42.1",
+    "sass-loader": "10.1.1"
   },
   "browserslist": [
     "> 1%",
